# agribot_ws

./: README.md
src/agribot_controller/: CMakeLists.txt  package.xml
src/agribot_controller/config/: agribot_controllers.yaml  joy_teleop.yaml
src/agribot_controller/launch/: controller.launch.py  joy_stick_teleop.launch.py
src/agribot_description/: CMakeLists.txt  package.xml
src/agribot_description/launch/: display.launch.py  gazebo.launch.py
src/agribot_description/meshes/: front_left_wheel_link.STL  front_right_wheel_link.STL  rear_left_wheel_link.STL  rear_right_wheel_link.STL  simple_volcanibot_wheel.STL
src/agribot_description/rviz/: display.rviz
src/agribot_description/urdf/: agribot.urdf.xacro  agribot_gazebo.xacro  agribot_ros2_control.xacro  material_properties.xacro
src/agribot_landmarks/: CMakeLists.txt  generate_markers.sh  package.xml
src/agribot_landmarks/agribot_landmarks/: aruco_creator.py  aruco_detector.py
src/agribot_landmarks/agribot_landmarks/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/agribot_landmarks/agribot_landmarks/log/: latest_build
src/agribot_landmarks/config/: display.rviz
src/agribot_landmarks/launch/: aruco_detector.launch.py
src/agribot_landmarks/markers/: marker_database.csv
src/agribot_landmarks/src/: aruco_detector.cpp  marker_creator.cpp
